; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/bar/extr_base.c_nvkm_bar_dtor.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/bar/extr_base.c_nvkm_bar_dtor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_subdev = type { i32 }
%struct.nvkm_bar = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i8* (%struct.nvkm_bar*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.nvkm_subdev*)* @nvkm_bar_dtor to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @nvkm_bar_dtor(%struct.nvkm_subdev* %0) #0 {
  %2 = alloca %struct.nvkm_subdev*, align 8
  %3 = alloca %struct.nvkm_bar*, align 8
  store %struct.nvkm_subdev* %0, %struct.nvkm_subdev** %2, align 8
  %4 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %2, align 8
  %5 = call %struct.nvkm_bar* @nvkm_bar(%struct.nvkm_subdev* %4)
  store %struct.nvkm_bar* %5, %struct.nvkm_bar** %3, align 8
  %6 = load %struct.nvkm_subdev*, %struct.nvkm_subdev** %2, align 8
  %7 = getelementptr inbounds %struct.nvkm_subdev, %struct.nvkm_subdev* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @nvkm_bar_bar2_fini(i32 %8)
  %10 = load %struct.nvkm_bar*, %struct.nvkm_bar** %3, align 8
  %11 = getelementptr inbounds %struct.nvkm_bar, %struct.nvkm_bar* %10, i32 0, i32 0
  %12 = load %struct.TYPE_2__*, %struct.TYPE_2__** %11, align 8
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i8* (%struct.nvkm_bar*)*, i8* (%struct.nvkm_bar*)** %13, align 8
  %15 = load %struct.nvkm_bar*, %struct.nvkm_bar** %3, align 8
  %16 = call i8* %14(%struct.nvkm_bar* %15)
  ret i8* %16
}

declare dso_local %struct.nvkm_bar* @nvkm_bar(%struct.nvkm_subdev*) #1

declare dso_local i32 @nvkm_bar_bar2_fini(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
